# doom-fire-cpp-port

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  fire-engine.cpp  fire-engine.h  fire-palette.cpp  fire-palette.h  fire-renderer.h  main.cpp
src/renderers/: CMakeLists.txt  fire-renderer-sdl.cpp  fire-renderer-sdl.h  fire-renderer-text.cpp  fire-renderer-text.h
